[package]
name = "segcache"
version = "0.1.0"
authors = ["Brian Martin <bmartin@twitter.com>", "Juncheng Yang <peter.waynechina@gmail.com>"]
description = "segment-structured in-memory storage with eager expiration"
homepage = "https://pelikan.io"
repository = "https://github.com/JunchengYTwitter/segcache"
license = "Apache-2.0"
workspace = "./"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[features]

# enables setting/checking magic strings
magic = []

# metafeatures
debug = ["magic"]

# default set of enabled features
default = []

[dependencies]
ahash = "0.7.2"
common = { git = "https://github.com/twitter/pelikan", features=["common"] }
datapool = { git = "https://github.com/twitter/pelikan", features=["datapool"] }
logger = { git = "https://github.com/twitter/pelikan", features=["logger"]}
storage-types = { git = "https://github.com/twitter/pelikan" }
# datapool = { path = "../datapool" }
# logger = { path = "../../logger" }
# storage-types = { path = "../types" }
memmap2 = "0.2.2"
rand = { version = "0.8.3", features = ["small_rng", "getrandom"] }
rand_chacha = { version = "0.3.0" }
rand_xoshiro = { version = "0.6.0" }
thiserror = "1.0.24"

[dependencies.rustcommon-metrics]
git = "https://github.com/twitter/rustcommon"
features = ["heatmap"]

[dev-dependencies]
criterion = "0.3.4"

[lib]
crate_type = ["cdylib"]

